--- a/TransferData/ServerB/ServerB.csproj
+++ b/TransferData/ServerB/ServerB.csproj
@@ -23,6 +23,7 @@
     <None Remove="Data\Models\" />
     <None Remove="Data\Services\" />
     <None Remove="WorkerSyncData\" />
+    <None Remove="Data\Repository\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
@@ -30,5 +31,6 @@
     <Folder Include="Data\Models\" />
     <Folder Include="Data\Services\" />
     <Folder Include="WorkerSyncData\" />
+    <Folder Include="Data\Repository\" />
   </ItemGroup>
 </Project>
