--- a/TransferData/ServerA/ServerA.csproj
+++ b/TransferData/ServerA/ServerA.csproj
@@ -23,6 +23,7 @@
     <None Remove="Data\Services\" />
     <None Remove="Data\ViewModels\" />
     <None Remove="CustomExceptions\" />
+    <None Remove="Data\Repository\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
@@ -31,5 +32,6 @@
     <Folder Include="Data\Services\" />
     <Folder Include="Data\ViewModels\" />
     <Folder Include="CustomExceptions\" />
+    <Folder Include="Data\Repository\" />
   </ItemGroup>
 </Project>
