--- a/TransferData/ServerA/ServerA.csproj
+++ b/TransferData/ServerA/ServerA.csproj
@@ -23,7 +23,7 @@
     <None Remove="Data\Services\" />
     <None Remove="Data\ViewModels\" />
     <None Remove="CustomExceptions\" />
-    <None Remove="Data\Repository\" />
+    <None Remove="Data\Interfaces\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Controllers\" />
@@ -32,6 +32,6 @@
     <Folder Include="Data\Services\" />
     <Folder Include="Data\ViewModels\" />
     <Folder Include="CustomExceptions\" />
-    <Folder Include="Data\Repository\" />
+    <Folder Include="Data\Interfaces\" />
   </ItemGroup>
 </Project>
